_sass/main.sass
/* color variables */
$white: #FFF
$black: #000
$green: #CBE86B
$gblue: #1E0FBE
$cream: #F2E9E1
$offwhite: #EFEFEF
$offblack: #1C140D
$grey: #DFDFDF

/* color assignments */
$link-color: $gblue
$background: $white

/* fonts */
$sans: 'Source Sans Pro'
$opensans: 'Open Sans'

/* variables */
$font: $opensans , sans-serif
$maxwidth: 768px
$break-large: 52em
$menu-background: #191818
$menu-color: #EEE

html,
button,
input,
select,
textarea,
.pure-g [class *= "pure-u"],
.pure-g-r [class *= "pure-u"]
  font-family: $font

a
  color: $link-color

#layout
  padding-left: 0
  @media screen and (min-width: $break-large)
    padding-left: 160px

.content
  background-color: $background
  margin-left: auto
  margin-right: auto
  display: block
  padding: 2em

.header
  margin: auto
  padding: 2em
  text-align: center
  max-width: $maxwidth

.header h1
  margin: 0 auto

#menu
  margin-left: -160px
  position: fixed
  width: 160px
  top: 0
  bottom: 0
  overflow-y: auto
  overflow-x: hidden
  border-style: solid
  border-width: 1px
  border-color: $grey
  @media screen and (min-width: $break-large)
    left: 160px

.pure-menu .pure-menu-heading
  margin-top: 0

.pure-menu.pure-menu-open
  border: none
  ul li
    border-bottom: 1px solid #B7B7B7

#menu, #menu a
  background-color: $menu-background
  color: $menu-color

.logo
  height: 160px
  background-color: $menu-background
  background-image: url('/images/logo-20131019.png')
  background-size: 125px 125px
  background-position: center
  background-repeat: no-repeat

